--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,7 +13,7 @@ const year = new Date().getFullYear();
           FOSSNSS
         </h3>
         <p class="text-sm text-gray-700 dark:text-gray-400 leading-relaxed">
-          The Free and Open Source Software Cell of NSS College of Engineering, Palakkad. Fostering innovation since 2009.
+          The Free and Open Source Software Cell of NSS College of Engineering, Palakkad.
         </p>
       </div>
       
